--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=http://www.normalesup.org/~hardy/">
+<meta http-equiv="refresh" content="0; url=http://www.normalesup.org/~hardy/~mhardy/">
 </head>
 <body>
 </body>
